@@ -1,3 +1,7 @@
+2013-09-15  Per Bothner  <per@bothner.com>
+
+	* ELisp.java (asNumber): Use Arithmetic.asNumeric.
+
 2012-12-31  Per Bothner  <per@bothner.com>
 
 	* MiscOps.scm (princ, prin1): New functions.
